# stock-magazin

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  compile_gui.bat  compile_gui.sh  setup_qt_path.bat  stock  stock.cpp  stock_gui.cpp  stock_gui.pro  stock_gui_resource.rc  test_app.bat
